--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@
 body{
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 .page__content{
     padding: 10px;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.page__layout{
+    flex: 1 1 auto;
 }
 .container{
     max-width:375px;
@@ -19,6 +26,10 @@ body{
     align-items: center;
     justify-content: center;
     gap: 20px;
+}
+.introduce__logo__icon{
+    height:80px;
+    width: 80px;
 }
 .introduce__text{
     display: flex;
@@ -119,8 +130,67 @@ body{
     justify-content: center;
     margin-bottom: 10px;
 }
-.more__img-1{
-    width: 300px;
+
+#slider-section {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+.slider-wrapper{
+    position: relative;
+}
+.previous,
+.next{
+   padding: 2px; 
+   width: 30px;
+   cursor: pointer;
+   border-radius: 50%;
+   outline: none;
+   transition: 0.7s ease-in-out;
+   border: 3px solid white;
+   background-color: #000;
+   box-shadow: 0 0 5px #bbb;
+   position: absolute;
+   top:50%;
+}
+.previous{
+    left: 2%;
+}
+.next{
+    right: 2%;
+}
+.previous:hover,
+.next:hover{
+    border: 3px solid gray;
+}
+#controls i{
+    color: white;
+    font-size: 1rem;
+}
+.tns-nav{
+    text-align: right;
+}
+.tns-nav button{
+    border: none;
+    padding: 8px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin-left: 15px;
+}
+.tns-nav .tns-nav-active{
+    display: none;
+}
+
+.slide{
+    width: auto;
+    height: fit-content;
+}
+
+.slide img{
+    width: 100%;
+    height: 275px;
 }
 .rate__title{
     letter-spacing: 0.1rem;
@@ -141,9 +211,22 @@ body{
     gap: 5px;
     margin-top: 10px;
 }
-
+.footer{
+    position: sticky;
+    bottom: 0;
+    padding-top: 20px;
+}
 .download__button{
-    background-color: rgb(250, 0, 0);
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    height: 50px;
+    border-radius: 10px;
+    text-decoration: none;
+    color:#000;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    
 }
 
